--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,7 @@
 }
 
 .App-header {
-  background-color: red;
-  min-height: 100vh;
+  background-color: purple;
   display: flex;
   flex-direction: column;
   align-items: center;
